force-app/main/default/objects/Diagnosis_Code__c/Diagnosis_Code__c.object-meta.xml
<CustomObject>
    <description>Patient Problem and Diagnosis is a junction object between a patient problem and a patient diagnosis related to a patient.</description>
    <label>Patient Problem and Diagnosis</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Problem and Diagnosis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>