force-app/main/default/objects/Diagnosis_Code__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Problem and Diagnosis</relationshipLabel>
    <relationshipName>Patient_Problem_and_Diagnosis</relationshipName>
    <type>Lookup</type>
</CustomField>