force-app/main/default/objects/Diagnosis_Code__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Episode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visits__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Patient Problem and Diagnosis</relationshipLabel>
    <relationshipName>Patient_Problem_and_Diagnosis</relationshipName>
    <type>Lookup</type>
</CustomField>