force-app/main/default/objects/Diagnosis_Code__c/fields/Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_Description__c</fullName>
    <formula>Diagnosis_Code__r.Code_Description1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Description</label>
    <type>Text</type>
</CustomField>