force-app/main/default/objects/Diagnosis_Code__c/fields/Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Label</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ICD_Codes__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>ICD_Codes__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Id__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ICD_Codes__c</referenceTo>
    <relationshipLabel>Patient Problem and Diagnosis</relationshipLabel>
    <relationshipName>Diagnosis_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>