force-app/main/default/objects/Diagnosis_Code__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Dataset1__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Id__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Dataset1__c</referenceTo>
    <relationshipLabel>Patient Problem and Diagnosis</relationshipLabel>
    <relationshipName>Diagnosis_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>