force-app/main/default/objects/Diagnosis_Code__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <formula>TEXT(Diagnosis_Code__r.Version__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version</label>
    <type>Text</type>
</CustomField>